--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/country-selector/views/view-accordion.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/country-selector/views/view-accordion.html
@@ -4,23 +4,23 @@
     <div class="container">
         <div class="row">
             <h2 class="b-heading-h2">${data.header}</h2>
-            <div data-sly-list="${data.locations}" class="panel-group country-selector-item" role="tablist" aria-multiselectable="true">
-                <div class="panel country-selector-item__panel">
-                    <div class="panel-heading country-selector-item__header" role="tab" id="${item.regionId}">
-                        <a href="#collapse-${itemList.index}" aria-expanded="false" aria-controls="collapse-${itemList.index}" class="country-selector-item__header--title"
-                           data-toggle="collapse" data-parent="country-selector-item">
-                            <i class="country-selector-item__icons icon icon-sign-minus"></i>
-                            <h3 class="country-selector-item__header--title b-heading-h3" role="button">
+            <div data-sly-list="${data.locations}" class="panel-group country-selector__list" role="tablist" aria-multiselectable="true">
+                <div class="panel country-selector__item">
+                    <div class="panel-heading country-selector__item-header" role="tab" id="${item.regionId}">
+                        <a href="#collapse-${itemList.index}" aria-expanded="false" aria-controls="collapse-${itemList.index}" class="country-selector__item-link"
+                           data-toggle="collapse" data-parent="country-selector__item">
+                            <h3 class="country-selector__item-title b-heading-h3" role="button">
                                 ${item.region}
                             </h3>
+                            <i class="country-selector__item-icon icon icon-sign-minus" aria-hidden="true"></i>
                         </a>
                     </div>
 
                     <div id="collapse-${itemList.index}" class="panel-collapse collapse" role="tabpanel" aria-labelledby="${item.regionId}">
-                        <div class="country-selector-item__body">
-                            <ul data-sly-list.country="${item.countries}">
-                                <li class="col-xs-12 col-sm-3">
-                                    <div>${country.country}</div>
+                        <div class="country-selector__item-body">
+                            <ul data-sly-list.item="${item.countries}" class="country-selector__item-list">
+                                <li class="col-xs-12 col-sm-3 country-selector__item-country">
+                                    <div>${item.country}</div>
                                 </li>
                             </ul>
                         </div>
