[Eaton-90] Country Selector: Markup updates ( anchor sibling in header for accessibility) + style updates

--- a/eaton.frontend/src/components/country-selector/css/views/_view-accordion.scss
+++ b/eaton.frontend/src/components/country-selector/css/views/_view-accordion.scss
@@ -11,15 +11,17 @@
 
   &__item-header {
     padding: ($spacing__sm / 2) 0;
-  }
-
-  &__item-link {
+    position: relative;
     display: flex;
     align-items: center;
   }
 
   &__item-title {
     flex-grow: 1;
+  }
+
+  &__item-icon {
+    color: $color__primary-blue;
   }
 
   &__item-body {
