[Styleguide] Docs updates & Cleanup

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/styleguide/partials/styleguide-scss-helpers.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/styleguide/partials/styleguide-scss-helpers.html
@@ -73,6 +73,11 @@
                   <td><code> class="b-eyebrow-small" </code></td>
                   <td><strong>eyebrow-small</strong> Style for Desktop &amp; Mobile breakpoints</td>
                 </tr>
+                <tr>
+                  <td>Hero Description</td>
+                  <td><code> class="b-hero-description" </code></td>
+                  <td><strong>hero-description</strong> Style for Desktop &amp; Mobile breakpoints</td>
+                </tr>
               </tbody>
             </table>
           </div>
