--- a/eaton.frontend/src/global/css/base/_typography.scss
+++ b/eaton.frontend/src/global/css/base/_typography.scss
@@ -143,6 +143,10 @@ h5,
 
 // BodyCopy
 //--------------
+.b-hero-description {
+  @include hero-description;
+}
+
 .b-body-copy {
   @include body-copy;
 }
