--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/global/css/etn-global.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/global/css/etn-global.css
@@ -110,7 +110,7 @@ a:hover, a:focus { color: #005EB8; text-decoration: underline; }
 
 h1, .b-heading-h1 { font-family: 'EatonMedium', sans-serif; font-size: 3.5rem; line-height: 4rem; margin-top: 0; }
 
-@media screen and (min-width: 992px) { h1, .b-heading-h1 { font-family: 'EatonMedium', sans-serif; font-size: 5.4rem; line-height: 6.8rem; } }
+@media screen and (min-width: 992px) { h1, .b-heading-h1 { font-family: 'EatonMedium', sans-serif; font-size: 5rem; line-height: 6rem; } }
 
 h2, .b-heading-h2 { font-family: 'EatonMedium', sans-serif; font-size: 2.8rem; line-height: 3.2rem; margin-top: 0; }
 
@@ -146,6 +146,10 @@ h5 a, .b-heading-h5 a { color: #005EB8; }
 
 .b-small-link:hover, .b-small-link:focus, .b-small-link:active { text-decoration: none; color: #005EB8; }
 
+.b-hero-description { font-family: Arial, sans-serif; font-size: 1.4rem; font-weight: normal; line-height: 2.2rem; }
+
+@media screen and (min-width: 992px) { .b-hero-description { font-family: Arial, sans-serif; font-size: 2rem; font-weight: normal; line-height: 3.2rem; } }
+
 .b-body-copy { font-family: Arial, sans-serif; font-size: 1.8rem; font-weight: normal; line-height: 2.8rem; }
 
 .b-body-copy a { color: #005EB8; }
@@ -160,11 +164,11 @@ h5 a, .b-heading-h5 a { color: #005EB8; }
 
 .b-eyebrow-large { color: #333F48; font-weight: bold; font-family: Arial, "Arial", sans-serif; font-size: 1.7rem; line-height: 2rem; text-transform: uppercase; }
 
-@media screen and (min-width: 992px) { .b-eyebrow-large { font-family: Arial, "Arial", sans-serif; font-size: 2.4rem; line-height: 3.8rem; text-transform: uppercase; } }
+@media screen and (min-width: 992px) { .b-eyebrow-large { font-family: Arial, "Arial", sans-serif; font-size: 2.4rem; line-height: 2.8rem; text-transform: uppercase; } }
 
 .b-eyebrow-small { color: #333F48; font-weight: bold; font-family: Arial, "Arial", sans-serif; font-size: 1.4rem; line-height: 1.7rem; text-transform: uppercase; }
 
-@media screen and (min-width: 992px) { .b-eyebrow-small { font-family: Arial, "Arial", sans-serif; font-size: 1.8rem; line-height: 2.4rem; text-transform: uppercase; } }
+@media screen and (min-width: 992px) { .b-eyebrow-small { font-family: Arial, "Arial", sans-serif; font-size: 1.8rem; line-height: 2rem; text-transform: uppercase; } }
 
 .b-h5-link-bold { font-family: Arial, sans-serif; font-size: 2rem; font-weight: bold; line-height: 3rem; font-family: "EatonBold", Arial, sans-serif; }
 
