--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/country-selector/css/country-selector.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/country-selector/css/country-selector.css
@@ -1,6 +1,14 @@
+.country-selector__item-icon::after { -moz-osx-font-smoothing: grayscale; -webkit-font-smoothing: antialiased; -webkit-box-sizing: border-box; box-sizing: border-box; display: inline-block; font-family: "eaton-glyphicon"; font-smoothing: antialiased; font-style: normal; font-variant: normal; font-weight: normal; line-height: 1; text-decoration: inherit; text-rendering: optimizeLegibility; text-transform: none; }
+
+.country-selector__item-link[aria-expanded="true"] + .country-selector__item-label .country-selector__item-icon::after { content: "\EA21"; }
+
+.country-selector__item-icon::after { content: "\EA22"; }
+
 .country-selector__item { border-bottom: 2px solid #EEF0F2; border-radius: 0; }
 
-.country-selector__item-header { padding: 15px 0; position: relative; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-align: center; -ms-flex-align: center; align-items: center; }
+.country-selector__item-header { padding: 15px 0; position: relative; }
+
+.country-selector__item-label { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-align: center; -ms-flex-align: center; align-items: center; }
 
 .country-selector__item-title { -webkit-box-flex: 1; -ms-flex-positive: 1; flex-grow: 1; }
 
