[EATON-81] Make HTML Comments regular comments instead of Sightly Comments

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/ttil/views/view-l2-hero.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/ttil/views/view-l2-hero.html
@@ -1,11 +1,11 @@
 <sly data-sly-use.data="${'../data/view-l2-hero-data.js' @tesdata=properties.testdata }">
   <div class="l2-hero l2-hero--vertical-align">
 
-    <!--/* Start: Rendition Background Component */-->
+    <!-- Start: Rendition Background Component -->
     <sly data-sly-use.tpl="../../../shared/templates/rendition-background.html">
       <sly data-sly-call="${ tpl.module @ data=data.image }"></sly>
     </sly>
-    <!--/* End: Rendition Background Component */-->
+    <!-- End: Rendition Background Component -->
 
     <div class="row text-center center-block">
       <div class="col-xs-12">
