--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/ttil-list/views/view-featured-story.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/ttil-list/views/view-featured-story.html
@@ -5,11 +5,11 @@
       <div class="row featured-story-component__row">
         <div class="col-xs-12 col-lg-11 featured-story-component__row--nopadding ${ componentList.odd ? 'col-lg-pull-0' : 'col-lg-offset-1' }">
 
-          <!--/* Start: Rendition Image Component */-->
+          <!-- Start: Rendition Image Component -->
           <sly data-sly-use.tpl="../../../shared/templates/rendition-image.html">
             <sly data-sly-call="${ tpl.module @ data=component.image }"></sly>
           </sly>
-          <!--/* End: Rendition Image Component */-->
+          <!-- End: Rendition Image Component -->
 
           <div class="col-xs-12 col-sm-5 col-lg-4 featured-story-component__blue ${componentList.odd ? 'featured-story-component__blue--right' : 'featured-story-component__blue--left'}">
             <div class="featured-story-component__content">
