Update LinkList - Horizontal View based on TCS Feedback - remove eyebrow since is not used in this view

--- a/eaton.frontend/src/components/link-list/css/views/_view-horizontal.scss
+++ b/eaton.frontend/src/components/link-list/css/views/_view-horizontal.scss
@@ -1,7 +1,7 @@
 //-----------------------------------
 // LinkList Component: Horizontal View
 //-----------------------------------
-.eaton-link-list-horizontal {
+.link-list-horizontal {
 
   &__eyebrow {
     text-transform: uppercase;
