--- a/eaton.frontend/src/components/link-list/css/views/_view-horizontal.scss
+++ b/eaton.frontend/src/components/link-list/css/views/_view-horizontal.scss
@@ -3,10 +3,6 @@
 //-----------------------------------
 .link-list-horizontal {
 
-  &__eyebrow {
-    text-transform: uppercase;
-  }
-
   &__list {
     margin: 0;
     padding: 0;
@@ -23,7 +19,7 @@
 
 
   //-----------------------------------
-  // Media-Query: Mobile
+  // Media-Query: 0 to 991px
   //-----------------------------------
   @include media-mobile-and-tablet {
     &__list-item {
@@ -34,7 +30,7 @@
 
 
   //-----------------------------------
-  // Media-Query: Tablet & Desktop
+  // Media-Query: 992px and up
   //-----------------------------------
   @include media-desktop-and-up {
 
@@ -67,6 +63,5 @@
     }
 
   }
-
 
 }
