--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/layout/grid-2-column-control/static_grid-2-column-control.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/layout/grid-2-column-control/static_grid-2-column-control.html
@@ -3,7 +3,7 @@
 </sly>
 
 
-<div class="eaton-grid-control eaton-grid-control--2-col">
+<div class="eaton-grid-control eaton-grid-control--2-col eaton-grid-control--theme-${properties.testdata}">
   <div class="container">
     <div class="row">
       <!--/* Include Parsys - Column One */-->
