--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/shared/templates/module-faceted-navigation/faceted-navigation-header.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/shared/templates/module-faceted-navigation/faceted-navigation-header.html
@@ -2,10 +2,10 @@
 
   <div class="faceted-navigation-header">
     <div class="faceted-navigation-header__header-top">
-      <div class="faceted-navigation-header__title">${ '{0} results' @ i18n, format=[ data.resultsCount ] }</div>
+      <div class="faceted-navigation-header__title">${ '{0} {1}' @ i18n, format=[ data.resultsCount, data.resultsLabel ] }</div>
       <div class="faceted-navigation-header__sort-options">
         <select>
-            <option selected>${ 'Sort by' @ i18n }</option>
+            <option selected>${ data.sortBy.sortByLabel }</option>
           <sly data-sly-list.sort="${ data.sortBy.items }">
             <option value="${ sort.url }">${ sort.label }</option>
           </sly>
@@ -13,16 +13,16 @@
       </div>
     </div>
 
-    <div data-sly-test="${ data.activeFilters.length }"
+    <div data-sly-test="${ data.activeFilters.items.length }"
       class="faceted-navigation-header__header-bottom">
 
       <!--/* If There Are Active Filters */-->
-      <div data-sly-list.filter="${ data.activeFilters }"
+      <div data-sly-list.filter="${ data.activeFilters.items }"
         class="faceted-navigation-header__active-filters">
         <a class="faceted-navigation-header__filter-link"
           href="${ filter.url }"
           target="${ filter.target }"
-          aria-label="${ 'Remove filter {0}' @ i18n, format=[ filter.label ] }">
+          aria-label="${ '{0} {1}' @ format=[ data.activeFilters.removeFilterLabel, filter.label ] }">
           <i class="icon icon-close" aria-hidden="true"></i>
           <span class="faceted-navigation-header__filter-label">${ filter.label }</span>
         </a>
@@ -30,9 +30,9 @@
 
       <!--/* Clear Filters */-->
       <div class="faceted-navigation-header__filters-actions">
-        <a href="${ data.clearAllFiltersLink.url }"
-          target="${ data.clearAllFiltersLink.target }"
-          class="faceted-navigation-header__action-link">${ data.clearAllFiltersLink.text }</a>
+        <a href="${ data.activeFilters.clearAllFilters.url }"
+          target="${ data.activeFilters.clearAllFilters.target }"
+          class="faceted-navigation-header__action-link">${ data.activeFilters.clearAllFilters.label }</a>
       </div>
     </div>
   </div>
