[Hotfix] Update Related Product Modules after the updates for Renditions Component - Note. it needs to be updated with the Specs described in EATON-81

--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/shared/templates/module-upsell-products.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/shared/templates/module-upsell-products.html
@@ -10,7 +10,7 @@
                     <a href="${item.link}" target="${item.target}" class="u-absolute-fill">
                       <span class="sr-only">${item.title}</span>
                     </a>
-                    <div class="col-xs-12 related-products-component__card">
+                    <div class="col-xs-12 related-products-component__card rendition">
                         <img class="carousel-component-slide__image" data-src="${item.image}" data-desktop-rendition="${item.image}" data-mobile-rendition="${item.mobile_image}" data-tablet-rendition="${item.tablet_image}" alt="${item.image_alt}"/>
                     </div>
                     <div class="col-xs-12 related-products-component__info">
