--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/product/product-support/views/view-product-support.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/product/product-support/views/view-product-support.html
@@ -9,7 +9,10 @@
         </div>
         <div class="col-xs-12 col-sm-10 col-sm-offset-2 col-lg-5 col-lg-offset-0">
             <div class="product-support-component__info">
-                <div class="product-support-component__info--text">${data.info @ context = 'html'}</div>
+                <div class="product-support-component__info--text">
+                    <p><strong>${data.info.title @ context = 'html'}</strong></p>
+                    ${data.info.text @ context = 'html'}
+                </div>
             </div>
         </div>
     </div>
