EATON-458: bugfix removed box-shadow for how to buy dropdown

--- a/eaton.frontend/src/shared/module-product-tabs/css/module-product-tabs.scss
+++ b/eaton.frontend/src/shared/module-product-tabs/css/module-product-tabs.scss
@@ -235,6 +235,7 @@
       border-radius: 0;
       margin-left: -46.5%;
       width: 93%;
+      box-shadow: none;
 
       li {
         padding: $spacing__sm 0 0 35px;
