--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/shared/module-product-tabs/css/module-product-tabs.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/shared/module-product-tabs/css/module-product-tabs.css
@@ -76,7 +76,7 @@
 
 .eaton-product-tabs__dropdown .icon { display: inline-block; font-size: 14px; padding-left: 10px; vertical-align: middle; }
 
-.eaton-product-tabs__dropdown__content { position: absolute; background-color: #F8F8F8; list-style: none; padding: 30px; top: 77px; left: 50%; margin: 0 auto; border: 0; border-radius: 0; margin-left: -46.5%; width: 93%; }
+.eaton-product-tabs__dropdown__content { position: absolute; background-color: #F8F8F8; list-style: none; padding: 30px; top: 77px; left: 50%; margin: 0 auto; border: 0; border-radius: 0; margin-left: -46.5%; width: 93%; -webkit-box-shadow: none; box-shadow: none; }
 
 .eaton-product-tabs__dropdown__content li { padding: 30px 0 0 35px; position: relative; }
 
