--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/search-box/css/search-box.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/search-box/css/search-box.css
@@ -14,7 +14,7 @@
 
 .dark-theme .eaton-search--inline__header { color: #FFF; }
 
-.eaton-search--default { padding: 30px 0 24px; background: #005EB8; }
+.eaton-search--default { padding: 30px 0; background: #005EB8; }
 
 .eaton-search--default .form-group { display: -webkit-box; display: -ms-flexbox; display: flex; border-bottom: 1px solid #FFF; margin-bottom: 0; position: relative; }
 
@@ -32,7 +32,7 @@
 
 .eaton-search--default__form-input:focus ~ .eaton-search--default__form-mobile-label { display: none; }
 
-.eaton-search--default__form-mobile-label { position: absolute; width: 100%; padding-right: 32px; color: #FFF; pointer-events: none; line-height: normal; padding-top: 8px; left: 0; top: 0; }
+.eaton-search--default__form-mobile-label { display: none; }
 
 .eaton-search--default__form-external { color: #FFF; -ms-flex-item-align: center; align-self: center; border-right: 1px solid #FFF; padding-right: 20px; }
 
@@ -60,14 +60,16 @@
 
 .eaton-search--default :-moz-placeholder { /* Firefox 18- */ color: #FFF; }
 
-@media screen and (max-width: 991px) { .eaton-search--default__form-input { font-size: 1em; padding-right: 20px; }
-  .eaton-search--default__form-submit { padding-right: 0; }
-  .eaton-search--default .icon-search { font-size: 1.25em; }
-  .search-open .eaton-search--default { height: 100%; overflow-y: auto; }
+@media screen and (max-width: 479px) { .eaton-search--default__form-mobile-label { position: absolute; width: 100%; padding-right: 32px; color: #FFF; pointer-events: none; line-height: normal; left: 0; top: 0; display: inline-block; }
   .eaton-search--default ::-webkit-input-placeholder { /* Chrome/Opera/Safari */ color: transparent; }
   .eaton-search--default ::-moz-placeholder { /* Firefox 19+ */ color: transparent; }
   .eaton-search--default :-ms-input-placeholder { /* IE 10+ */ color: transparent; }
   .eaton-search--default :-moz-placeholder { /* Firefox 18- */ color: transparent; } }
+
+@media screen and (max-width: 991px) { .eaton-search--default__form-input { font-size: 1em; padding-right: 20px; }
+  .eaton-search--default__form-submit { padding-right: 0; }
+  .eaton-search--default .icon-search { font-size: 1.25em; }
+  .search-open .eaton-search--default { height: 100%; overflow-y: auto; } }
 
 @media screen and (min-width: 992px) { .eaton-search--default__form-input, .eaton-search--default .icon-search { font-size: 1.5em; left: 10px; }
   .eaton-header--fixed .eaton-search--default__form-input, .eaton-header--fixed .eaton-search--default .icon-search { left: 0; }
