--- a/eaton.frontend/src/components/country-selector/css/views/_view-accordion.scss
+++ b/eaton.frontend/src/components/country-selector/css/views/_view-accordion.scss
@@ -4,13 +4,23 @@
 //-----------------------------------
 
 .country-selector {
+  padding: $spacing__md 0;
+
+  &__header {
+    margin-bottom: 0;
+  }
+
+  &__list {
+    padding: ($spacing__sm / 2) 0;
+  }
+
   &__item {
     border-bottom: 2px solid $color__secondary-gray5;
     border-radius: 0;
   }
 
   &__item-header {
-    padding: ($spacing__sm / 2) 0;
+    padding: ($spacing__md / 3) 0 ($spacing__sm / 3);
     position: relative;
     display: flex;
     align-items: center;
@@ -18,6 +28,7 @@
 
   &__item-title {
     flex-grow: 1;
+    margin-bottom: 0;
   }
 
   &__item-icon {
@@ -30,12 +41,11 @@
   }
 
   &__item-body {
-    padding: $spacing__sm 0;
+    // padding: $spacing__sm 0;
   }
 
   &__item-list {
     display: block;
-    margin: 0;
     padding: 0;
     list-style: none;
     overflow: hidden;
