--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/country-selector/css/country-selector.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/country-selector/css/country-selector.css
@@ -4,16 +4,20 @@
 
 .country-selector__item-icon::after { content: "\EA22"; }
 
+.country-selector { padding: 60px 0; }
+
+.country-selector__header { margin-bottom: 0; }
+
+.country-selector__list { padding: 15px 0; }
+
 .country-selector__item { border-bottom: 2px solid #EEF0F2; border-radius: 0; }
 
-.country-selector__item-header { padding: 15px 0; position: relative; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-align: center; -ms-flex-align: center; align-items: center; }
+.country-selector__item-header { padding: 20px 0 10px; position: relative; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-align: center; -ms-flex-align: center; align-items: center; }
 
-.country-selector__item-title { -webkit-box-flex: 1; -ms-flex-positive: 1; flex-grow: 1; }
+.country-selector__item-title { -webkit-box-flex: 1; -ms-flex-positive: 1; flex-grow: 1; margin-bottom: 0; }
 
 .country-selector__item-icon { color: #005EB8; }
 
-.country-selector__item-body { padding: 30px 0; }
-
-.country-selector__item-list { display: block; margin: 0; padding: 0; list-style: none; overflow: hidden; }
+.country-selector__item-list { display: block; padding: 0; list-style: none; overflow: hidden; }
 
 .country-selector__item-country { padding: 15px; }
