--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/country-selector/views/view-accordion.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/country-selector/views/view-accordion.html
@@ -25,11 +25,16 @@
                     <div id="collapse-${itemList.index}" class="panel-collapse collapse" role="tabpanel" aria-labelledby="${item.regionId}">
                         <div class="country-selector__item-body">
                             <ul data-sly-list.country="${item.countryList}" class="row country-selector__item-list">
-                                <li class="col-xs-12 col-sm-3 country-selector__item-country">
-                                    <div>${country.countryName}</div>
-                                    <div data-sly-list.language="${country.languageList}">
-                                        <a href="${language.languagePath}" target="{language.target}">${language.languageName}</a>
+                                <li class="col-xs-12 col-md-3 country-selector__item-country">
+                                    <div class="country-selector__item-country-name">
+                                      <i class="country-selector__item-country-flag icon icon-${country.countryId}" aria-hidden="true"></i>
+                                      <span class="country-selector__item-country-label">${country.countryName}</span>
                                     </div>
+                                    <ul data-sly-list.language="${country.languageList}" class="country-selector__item-language-list">
+                                        <li class="country-selector__item-language">
+                                          <a href="${language.languagePath}" target="{language.target}">${language.languageName}</a>
+                                        </li>
+                                    </ul>
                                 </li>
                             </ul>
                         </div>
