--- a/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/country-selector/css/country-selector.css
+++ b/eaton.ui.static/src/main/content/jcr_root/etc/designs/eaton-static/clientlib-static/components/country-selector/css/country-selector.css
@@ -8,16 +8,28 @@
 
 .country-selector__header { margin-bottom: 0; }
 
-.country-selector__list { padding: 15px 0; }
-
 .country-selector__item { border-bottom: 2px solid #EEF0F2; border-radius: 0; }
 
-.country-selector__item-header { padding: 20px 0 10px; position: relative; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-align: center; -ms-flex-align: center; align-items: center; }
+.country-selector__item-header { padding: 30px 0 10px; position: relative; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-align: center; -ms-flex-align: center; align-items: center; }
 
 .country-selector__item-title { -webkit-box-flex: 1; -ms-flex-positive: 1; flex-grow: 1; margin-bottom: 0; }
 
 .country-selector__item-icon { color: #005EB8; }
 
+.country-selector__item-body { padding-bottom: 10px; }
+
 .country-selector__item-list { display: block; padding: 0; list-style: none; overflow: hidden; }
 
-.country-selector__item-country { padding: 15px; }
+.country-selector__item-country { padding: 5px 15px 15px; }
+
+.country-selector__item-country-name { display: -webkit-box; display: -ms-flexbox; display: flex; padding-bottom: 5px; }
+
+.country-selector__item-country-label { text-transform: uppercase; font-weight: bold; }
+
+.country-selector__item-language-list { padding: 0; margin: 0; list-style: none; }
+
+@media screen and (min-width: 992px) { .country-selector__item-language { display: inline-block; }
+  .country-selector__item-language a { color: #333; border-right: 1px solid #333; padding: 0 8px; }
+  .country-selector__item-language a:hover, .country-selector__item-language a:focus { color: #333; }
+  .country-selector__item-list__item-language:first-child a { padding-left: 0; }
+  .country-selector__item-list__item-language:last-child a { border: 0; } }
