--- a/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/country-selector/views/view-accordion.html
+++ b/eaton.ui.static/src/main/content/jcr_root/apps/eaton/static-components/content/country-selector/views/view-accordion.html
@@ -28,9 +28,9 @@
                                 <li class="col-xs-12 col-md-3 country-selector__item-country">
                                     <div class="country-selector__item-country-name">
                                       <i class="country-selector__item-country-flag icon icon-${country.countryId}" aria-hidden="true"></i>
-                                      <span class="country-selector__item-country-label">${country.countryName}</span>
+                                      <span class="country-selector__item-country-label b-eyebrow-small">${country.countryName}</span>
                                     </div>
-                                    <ul data-sly-list.language="${country.languageList}" class="country-selector__item-language-list">
+                                    <ul data-sly-list.language="${country.languageList}" class="country-selector__item-language-list b-body-copy-small">
                                         <li class="country-selector__item-language">
                                           <a href="${language.languagePath}" target="{language.target}">${language.languageName}</a>
                                         </li>
